--- a/composer.json
+++ b/composer.json
@@ -115,7 +115,7 @@
   },
   "require-dev": {
     "cache/integration-tests": "^0.15.0",
-    "codeception/codeception": "2.2.*"
+    "codeception/codeception": "^2.3"
   },
   "suggest": {
     "ext-curl": "*",
